--- a/Gallery/css/style.css
+++ b/Gallery/css/style.css
@@ -79,7 +79,7 @@ header div{
 	border-bottom: 3px solid #f1c40f !important;
 }
 .pictures{
-	margin: 3%;
+	margin: 3% 3% 0% 3%;
 	width: 92%;
 	display: block;
 	font-size: 0;
@@ -94,7 +94,6 @@ header div{
 .footer{
 	padding: 1% 0;
 	background-color: #fff;
-	color: #000;
 }
 .footer span{
 	font-family: 'Montserrat', sans-serif;
