--- a/Plan/css/style.css
+++ b/Plan/css/style.css
@@ -81,7 +81,7 @@ header div{
 }
 .third{
 	display: block;
-	padding: 3% 2%;
+	padding: 3% 2% 0% 2%;
 	width: 96%;
 	background-color: #222d2f;
 }
@@ -123,28 +123,29 @@ header div{
 	padding: 1% 5%;
 }
 .third li{
-	cursor: pointer;
+	/* cursor: pointer; */
 	display: inline-block;
-	width: 43%;
+	/* width: 43%; */
+	width: 23%;
 	padding: 2% 1%;
 	margin: 1% 2%;
 	background-color: #e67e22;
-	text-transform: uppercase;
+	font-size: 120%;
+	/* text-transform: uppercase; */
 }
 .third li:hover{
 	background-color: #f1c40f;
 }
 .footer{
 	padding: 1% 0;
-	background-color: #fff;
-	color: #000;
+	background-color: #222d2f;
 }
 .footer span{
 	font-family: 'Montserrat', sans-serif;
 	color: #000;
 }
 .footer h4{
-	color: #000;
+	color: #fff;
 }
 .footer span:hover{
 	color: #d35400;
